Support arm64 docker build

--- a/.github/workflows/push_docker_image.yml
+++ b/.github/workflows/push_docker_image.yml
@@ -18,6 +18,8 @@ jobs:
           submodules: recursive
       - name: login
         run: docker login --username '${{ secrets.DOCKER_USERNAME }}' --password '${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}'
+      - name: cleanup
+        run: docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
       - name: build
         run: docker build . -t planetariumhq/ninechronicles-headless:git-${{ github.sha }} --build-arg COMMIT=git-${{ github.sha }}
       - name: push git-version
