--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -45,6 +45,7 @@ RUN mkdir -p /opt/datadog \
     && TRACER_VERSION=$(curl -s https://api.github.com/repos/DataDog/dd-trace-dotnet/releases/latest | grep tag_name | cut -d '"' -f 4 | cut -c2-) \
     && curl -LO https://github.com/DataDog/dd-trace-dotnet/releases/download/v${TRACER_VERSION}/datadog-dotnet-apm_${TRACER_VERSION}_amd64.deb \
     && dpkg -i ./datadog-dotnet-apm_${TRACER_VERSION}_amd64.deb \
+    && /opt/datadog/createLogPath.sh \
     && rm ./datadog-dotnet-apm_${TRACER_VERSION}_amd64.deb
 
 # Enable the tracer
