--- a/Dockerfile.arm64v8
+++ b/Dockerfile.arm64v8
@@ -42,7 +42,8 @@ RUN mkdir -p /opt/datadog \
     && mkdir -p /var/log/datadog \
     && TRACER_VERSION=$(curl -s https://api.github.com/repos/DataDog/dd-trace-dotnet/releases/latest | grep tag_name | cut -d '"' -f 4 | cut -c2-) \
     && curl -LO https://github.com/DataDog/dd-trace-dotnet/releases/download/v${TRACER_VERSION}/datadog-dotnet-apm-${TRACER_VERSION}.arm64.tar.gz \
-    && tar -xvzf ./datadog-dotnet-apm-${TRACER_VERSION}.arm64.tar.gz \
+    && tar -C /opt/datadog -xzf ./datadog-dotnet-apm-${TRACER_VERSION}.arm64.tar.gz \
+    && /opt/datadog/createLogPath.sh \
     && rm ./datadog-dotnet-apm-${TRACER_VERSION}.arm64.tar.gz
 
 # Enable the tracer
