--- a/NineChronicles.Headless.Executable/appsettings.json
+++ b/NineChronicles.Headless.Executable/appsettings.json
@@ -1,7 +1,7 @@
 {
     "Serilog": {
         "Using": [ "Serilog.Expressions", "Serilog.Sinks.Console", "Serilog.Sinks.RollingFile" ],
-        "MinimumLevel": "Debug",
+        "MinimumLevel": "Verbose",
         "WriteTo": [
             {
                 "Name": "Logger",
